2006-03-09  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/path-chemistry.cpp (sp_selected_path_reverse):
	  Fix when multiple paths are selected.
	  Also fix a small memory leak.

2006-03-06  MenTaLguY  <mental@rydia.net>

	* src/document-subset.h, src/document-subset.cpp:
	  add DocumentSubset::_clear

2006-03-05  MenTaLguY  <mental@rydia.net>

	* src/document-subset.h, src/document-subset.cpp:
	  remove unneeded document parameter from constructor

2006-03-05  MenTaLguY  <mental@rydia.net>

	* src/document-subset.cpp:

	  Wire up new SPObject signal to DocumentSubset, so order changes
	  will be reflected in the subset.

2006-03-05  MenTaLguY  <mental@rydia.net>

	* src/sp-object.h, src/sp-object.cpp:

	  Add signal for notification of object position changes.

2006-03-05  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/document-subset.cpp, src/document-subset.h:

	  Add DocumentSubset as groundwork for layers.

2006-03-04  Jon A. Cruz  <jon@joncruz.org>
	* src/ui/widget/selected-style.h, src/ui/widget/selected-style.cpp:

	  Style minibar now only accepts color drag-n-drop when not N/A.
	  Final tweak for completing RFE #1429027.
	
2006-02-28  Jon A. Cruz  <jon@joncruz.org>
	* src/ui/widget/selected-style.h, src/ui/widget/selected-style.cpp:

	  Made the style minibar a target for color drag-n-drop.
	
2006-03-01  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/conn-avoid-ref.cpp, src/libavoid/connector.h,
	  src/libavoid/shape.cpp, src/libavoid/graph.cpp, src/libavoid/shape.h,
	  src/libavoid/graph.h, src/libavoid/router.cpp, src/libavoid/router.h,
	  src/libavoid/connector.cpp, src/libavoid/debug.h:

	  Some speed improvements and interface cleanups to libavoid.

2006-02-28  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/swatches.cpp:

	  Fixed drag-n-drop out of color to match GTK+ standard.
	
2006-02-27  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/swatches.cpp, src/ui/previewfillable.h,